--- a/contacto.html
+++ b/contacto.html
@@ -100,6 +100,29 @@
                                     <h4>SKIPPERS</h4>
                                     <h6>Contacto</h6>
 									<br/><br/>
+								
+									<form action="php/send.php" method="post">
+										<div>
+											<label for="name">Name</label>
+											<br/>
+											<input type="text" id="name" required />
+										</div>
+										<div>
+											<label for="mail">E-mail</label>
+											<br/>
+											<input type="email" id="mail" required />
+										</div>
+										<div>
+											<label for="msg">Message</label>
+											<br/>
+											<textarea id="msg"></textarea>
+										</div>
+										
+										<div class="button">
+										<button type="submit">Send your message</button>
+										</div>
+									</form>
+									<br/><br/><br/><br/><br/><br/><br/><br/>
 									<font color="white" size="5px">Teléfono: 677664963 (Pablo)</font>
 									<br/>
 									<font color="white" size="5px">E-mail: skippersonlines@gmail.com</font>
