--- a/contacto.html
+++ b/contacto.html
@@ -101,25 +101,25 @@
                                     <h6>Contacto</h6>
 									<br/><br/>
 								
-									<form action="php/send.php" method="post">
+									<form action="send.php" method="post">
 										<div>
-											<label for="name">Name</label>
+											<label for="name">Nombre</label>
 											<br/>
-											<input type="text" id="name" required />
+											<input type="text" name="name" id="name" required />
 										</div>
 										<div>
 											<label for="mail">E-mail</label>
 											<br/>
-											<input type="email" id="mail" required />
+											<input type="email" name="mail" id="mail" required />
 										</div>
 										<div>
-											<label for="msg">Message</label>
+											<label for="msg">Mensaje</label>
 											<br/>
-											<textarea id="msg"></textarea>
+											<textarea name="msg" id="msg"></textarea>
 										</div>
 										
 										<div class="button">
-										<button type="submit">Send your message</button>
+										<button type="submit" name="submit">Enviar</button>
 										</div>
 									</form>
 									<br/><br/><br/><br/><br/><br/><br/><br/>
