--- a/tienda.html
+++ b/tienda.html
@@ -37,7 +37,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="index.html">SKIPPERS OFFICIAL WEB SITE</a>
+                            <a class="navbar-brand" href="index.php">SKIPPERS OFFICIAL WEB SITE</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="icon-menu"></span>
               </button>
